--- a/style.css
+++ b/style.css
@@ -1,21 +1,63 @@
+/* common property  */
 *{
     box-sizing: border-box;
 }
 
-/* common property*/
+
 html{
-    font-size: border-box;
+    font-size:20px;
 }
 
 body{
     font-family: 'Inconsolata', monospace;
 }
-/* LOGO*/
-#logo{
-    max-width: 4rem;
-    max-height: 3rem;
+
+ul li{
+list-style-type: none;    
 }
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+/* cok satır gösterme */
+.line-clamp-2{
+display: -webkit-box;
+-webkit-line-clamp:2;
+-webkit-box-orient: vertical;
+overflow: hidden;
+}
+
+.line-clamp-3{
+display: -webkit-box;
+-webkit-line-clamp:3;
+-webkit-box-orient: vertical;
+overflow: hidden;
+}
+
+
+.line-clamp-4{
+display: -webkit-box;
+-webkit-line-clamp:4;
+-webkit-box-orient: vertical;
+overflow: hidden;
+}
+
+
+/* LOGO */
+#logo{
+    max-width:4rem ;
+    height: 3.4rem;
+}
+
 #logo:hover{
-    box-shadow: 1px 2px 4px 2px #02a4e4;
+    box-shadow: 1px 1px 15px 1px #02a4e4;
     transition: 1s all;
+}
+
+
+/* navbar*/
+#navbar_id i{
+    color:rgb(76, 76, 216);
 }
