footer SSS eklendi

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* common property  */
 *{
     box-sizing: border-box;
@@ -100,6 +101,18 @@ header div{
 #product .row .card{
     margin-bottom: 4%;
 }
+
+/* company information */
+#company_information{
+    margin-bottom: 8%;
+}
+#company_information i{
+    font-size: 4rem;
+    color: #017dc3;
+    margin-left:40%;
+    margin-bottom:12%;
+}
+
 
 /*footer*/
 footer{
